implemented fetch api

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Simple-todo-app</title>
 </head>
 <body>
+    <h2 class="title-head">ToDo Fetch API</h2>
     <header>
         <form class="todo">
             <input name="task" type="text" placeholder="Type ToDo Title">
+            <!-- <input type="submit" id="add" value='Add'> -->
         </form>
     </header>
     <main>
