--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <h2 class="title-head">ToDo Fetch API</h2>
     <header>
         <form class="todo">
-            <input name="task" type="text" placeholder="Type ToDo Title">
-            <!-- <input type="submit" id="add" value='Add'> -->
+            <input name="task" type="text" placeholder="Type ToDo Title" id="textInput">
+            <div id="msg"></div>
+            <input type="submit" id="add" value='Add'>
         </form>
     </header>
     <main>
